# f1tenth-final

./: README.md
final_pkg/: CMakeLists.txt  _CMakeLists.txt  package.xml  setup.cfg  setup.py  yolof110.trt
final_pkg/config/: _final_params.yaml  final_params.yaml  final_params_offline.yaml
final_pkg/include/final_pkg/: csv_loader.hpp  executer.hpp  opponent.hpp
final_pkg/include/final_pkg/blocking/: blocking.hpp
final_pkg/include/final_pkg/pure_pursuit/: pure_pursuit.hpp
final_pkg/include/final_pkg/rrt/: rrt.hpp
final_pkg/launch/: final_launch.py  oppo_launch.py  scan_test_launch.py
final_pkg/maps/: final_race_clean.pgm  final_race_clean.yaml
final_pkg/path/: _using.csv  centerline.csv  levine.csv  optimized_lane.csv  optimized_lane_extreme.csv  using.csv
final_pkg/scripts/: get_obs_node.py  planner_node.py  sim_map_node.py  tf_handle_node.py
final_pkg/scripts/waypoints/: waypoint_logger.py  waypoint_visualizer.py
final_pkg/src/: csv_loader.cpp  executer.cpp  executer_node.cpp  opponent.cpp  opponent_node.cpp
final_pkg/src/blocking/: blocking.cpp
final_pkg/src/cuda/: cuda.cu
final_pkg/src/pure_pursuit/: pure_pursuit.cpp
final_pkg/src/rrt/: debug.cpp  math.cpp  rrt.cpp  visualize.cpp
final_pkg/src/utils/: csv_loader.cpp
final_pkg/utils/: genYaw.py  origin.csv  sampled.csv  waypoints_handler.py
install/: local_setup.sh  setup.sh
log/: latest_build
raceline_optimization/trajectory_generator/: requirements.txt
raceline_optimization/trajectory_generator/config/: params.yaml
sh/: build.sh  launch.sh  rviz.sh
vision_pkg/: CMakeLists.txt  ego_racecar.xacro  yolof110_updated.onnx  yolof110_updated.trt
vision_pkg/install/: local_setup.sh  setup.sh
vision_pkg/install/vision_pkg/lib/vision_pkg/: f110_yolo_hw_final.py  getPixelCoord.py  get_pos_from_pixel.py  intrinsicMat.py
vision_pkg/install/vision_pkg/share/ament_index/resource_index/package_run_dependencies/: vision_pkg
vision_pkg/install/vision_pkg/share/ament_index/resource_index/parent_prefix_path/: vision_pkg
vision_pkg/install/vision_pkg/share/vision_pkg/: local_setup.sh  package.sh
vision_pkg/log/: latest_build
vision_pkg/scripts/: camera.py  distance.py  f110_yolo_hw_final.ipynb  f110_yolo_hw_final.py  get_pos_from_pixel.py  integration.py  intrinsicMat.py  lane.cpp  lane.py
